--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AptAppAdmin",
+  "name": "RiseleyAppAdmin",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -32,6 +32,8 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.12.1",
+    "firebase-admin": "^6.1.0",
+    "firebase-functions": "^2.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "^4.17.5",
